# jarvis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: ha-provision.json
custom_components/jarvis/: README.md  __init__.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json
docs/: architecture.md  deploy-mac-mini.md  laptop-e2e.md  satellites.md
jarvis/: __init__.py
jarvis/adapters/: __init__.py
jarvis/adapters/brain/: __init__.py  claude_code.py  echo.py
jarvis/adapters/ha/: __init__.py  rest.py
jarvis/adapters/ingress/: __init__.py  ha_conversation.py
jarvis/adapters/speaker_id/: __init__.py  null.py
jarvis/adapters/store/: __init__.py  sqlite.py
jarvis/adapters/tts/: __init__.py  ha_piper.py  null.py
jarvis/app/: __init__.py  config.py  main.py
jarvis/app/api/: __init__.py  ingress.py
jarvis/app/events/: __init__.py  bus.py  events.py
jarvis/app/observability/: __init__.py  event_log.py  logging.py  trace.py
jarvis/domain/: __init__.py  events.py  models.py  routing.py  sessions.py
jarvis/ports/: __init__.py  brain.py  events.py  home_assistant.py  notifier.py  speaker_id.py  store.py  tts.py
jarvis/services/: __init__.py  handle_utterance.py
native/whisper/: README.md  install.sh  requirements.txt  run.sh  wyoming_mlx_whisper.py
scripts/: README.md  check_brain_billing.sh  provision_ha.py  wakeword_mic_test.py  wakeword_test.py
tests/: conftest.py  test_app.py  test_boundaries.py  test_events.py  test_fakes.py  test_ingress.py  test_observability.py  test_ports.py  test_scaffolding.py
tests/adapters/: test_claude_code_brain.py  test_ha_rest.py  test_null_speaker_id.py  test_store_contract.py  test_tts.py
tests/domain/: test_models.py  test_routing.py  test_sessions.py
tests/fakes/: __init__.py  brain.py  home_assistant.py  notifier.py  speaker_id.py  store.py  tts.py
tests/services/: test_handle_utterance.py
